--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ nav:
   - Overview: index.md
   - API Documentations:
       - User: api/user.md
-      - University: api/University.md
+      - University: api/university.md
   # - Installation: installation.md
   # - Usage: usage.md
   # - Contributing: contributing.md
