added new pages

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,9 @@ site_url: https://unilink-docs.pages.dev
 # Pages
 nav:
   - Overview: index.md
+  - Installation:
+      - Frontend: installation/frontend.md
+      - Backend: installation/backend.md
   - API Documentations:
       - User: api/user.md
       - University: api/university.md
