--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,8 +28,8 @@ extra_css:
 # Theme
 theme:
   name: material
-  favicon: /assets/images/logo.svg
-  logo: /assets/images/logo.svg
+  favicon: assets/images/logo.svg
+  logo: assets/images/logo.svg
   font:
     text: Roboto
     code: Roboto Mono
