fixed styles and logo not working sometimes

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,7 +23,7 @@ repo_url: https://github.com/ehsan18t/unilink
 copyright: Copyright &copy; 2023 Team Showstopper
 
 extra_css:
-  - stylesheets/extra.css
+  - assets/stylesheets/extra.css
 
 # Theme
 theme:
