--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ click==8.1.7
 colorama==0.4.6
 cssselect==1.2.0
 ghp-import==2.1.0
+gitdb==4.0.10
+GitPython==3.1.32
 idna==3.4
 Jinja2==3.1.2
 lxml==4.9.3
@@ -14,6 +16,8 @@ markdown2==2.4.10
 MarkupSafe==2.1.3
 mergedeep==1.3.4
 mkdocs==1.5.2
+mkdocs-git-committers-plugin-2==1.1.2
+mkdocs-git-revision-date-localized-plugin==1.2.0
 mkdocs-material==9.2.5
 mkdocs-material-extensions==1.1.1
 packaging==23.1
@@ -24,12 +28,14 @@ Pygments==2.16.1
 pymdown-extensions==10.1
 pyquery==2.0.0
 python-dateutil==2.8.2
+pytz==2023.3
 PyYAML==6.0.1
 pyyaml_env_tag==0.1
 readtime==3.0.0
 regex==2023.8.8
 requests==2.31.0
 six==1.16.0
+smmap==5.0.0
 soupsieve==2.4.1
 urllib3==2.0.4
 watchdog==3.0.0
