--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,10 @@ nav:
   - API Documentations:
       - User: api/user.md
       - University: api/university.md
+  - Conclusion:
+      - Future Plan: future.md  
+
+
   # - Installation: installation.md
   # - Usage: usage.md
   # - Contributing: contributing.md
