--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,8 +36,7 @@ nav:
       - Backend Setup Guide: installation/backend.md
       - Frontend Setup Guide: installation/frontend.md
   - Testing:
-      - Backend Testing: testing/backend.md
-      - Frontend Testing: testing/frontend.md
+      - Test Cases: testing/backend.md
   - API Documentations:
       - User API: api/user.md
       - University API: api/university.md
