added section management

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,7 @@ nav:
           - Overview: user-manual/admin/overview.md
           - Department Management: user-manual/admin/department.md
           - Course Management: user-manual/admin/course.md
+          - Section Management: user-manual/admin/section.md
       - Student Guide:
           - Students: user-manual/student/student.md
   - Installation:
